package fr.projava.triangle;

public class Launcher {
    public static void main(String[] args) {
        mainApp.main(args);
    }
}