package fr.projava.triangle.Observers;

public interface Observer {
    void update(String message);
}
